Minor bugfixes and level 3 improvements
This commit brings out new improvements:

1) Level 3 (The Flash Serie)
- Stars requirements got buffed, meaning that receiving star is slightly
more difficult than it used to be;
- Resolve an issue, when during gameplay, a sudden flash was happening
from time to time. Keeping animation targets for tile gradient animation
solved the issue.

2) Confirm screen
- Another update, which helps properly hiding elements before showing
Confirmation screen. This time, star box got impacted, so that flickering
would no longer be an issue;

3) Preview page scrollbar issue
- Retrieved overflow blocking when player opens up level_info tab. This
one got accidentally unblocked, but now everything's working fine.

--- a/src/global/global_styles.css
+++ b/src/global/global_styles.css
@@ -11,7 +11,7 @@
  */
 body {
   overflow-x: hidden !important;
-  overflow-y: auto !important;
+/*   overflow-y: auto !important; */  
   background-color: hsl(0deg, 0%, 0%);
 }
 
