--- a/src/styles/confirm.css
+++ b/src/styles/confirm.css
@@ -99,6 +99,7 @@
   align-items: center;
   justify-content: center;
   justify-content: space-around;
+  opacity: 0;
 }
 
 /*  2  */
